Changes for Mira/Skeld/Polus Maps

--- a/client-data/Mira.html
+++ b/client-data/Mira.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8" />
 	<title>{{board}} | WBO | {{translations.collaborative_whiteboard}}</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<link rel="stylesheet" type="text/css" href="../board.css" />
+	<link rel="stylesheet" type="text/css" href="../Mira.css" />
 	<script src="../socket.io/socket.io.js"></script>
 	<meta name="description" content="{{translations.tagline}}" />
 	<meta name="keywords"
@@ -18,7 +18,7 @@
 	<link rel="manifest" href="https://scoreboard.rankedamongus.com/images/favicon/site.webmanifest">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
 	<meta property="og:title" content="{{board}} board on WBO" />
-	<meta property="og:url" content="{{baseUrl}}/boards/{{boardUriComponent}}" />
+	<meta property="og:url" content="{{baseUrl}}/Mira/{{boardUriComponent}}" />
 	<meta property="og:image" content="{{baseUrl}}/preview/{{boardUriComponent}}" />
 	<link rel="canonical" href="{{boardUriComponent}}?lang={{language}}" />
 	{{#languages}}
@@ -101,7 +101,7 @@
 	<script type="application/json" id="configuration">{{{ json configuration }}}</script>
 	<script src="../js/path-data-polyfill.js"></script>
 	<script src="../js/minitpl.js"></script>
-	<script src="../js/board.js"></script>
+	<script src="../js/Mira.js"></script>
 	<script src="../tools/pencil/wbo_pencil_point.js"></script>
 	<script src="../tools/pencil/pencil.js"></script>
 	<script src="../tools/cursor/cursor.js"></script>
