--- a/client-data/board_Skeld.html
+++ b/client-data/board_Skeld.html
@@ -10,12 +10,12 @@
 	<meta name="description" content="{{translations.tagline}}" />
 	<meta name="keywords"
 		content="{{translations.collaborative_whiteboard}},online,draw,paint,shared,realtime,wbo,whitebophir" />
-	<link rel="icon" type="image/x-icon" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico">
-	<link rel="shortcut icon" type="image/x-icon" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="https://scoreboard.rankedamongus.com/images/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-16x16.png">
-	<link rel="manifest" href="https://scoreboard.rankedamongus.com/images/favicon/site.webmanifest">
+	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicon/site.webmanifest">
+	<link rel="icon" type="image/x-icon" sizes="16x16" href="../favicon.ico">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
 	<meta property="og:title" content="{{board}} board on WBO" />
 	<meta property="og:url" content="{{baseUrl}}/Skeld/{{boardUriComponent}}" />
