--- a/client-data/index.html
+++ b/client-data/index.html
@@ -6,14 +6,13 @@
 	<title>Ranked Among Us Whiteboards</title>
 	<link rel="stylesheet" href="index.css" />
 	<meta name="description" content="{{translations.tagline}}" />
-	<meta name="keywords"
-		content="whiteboard,collaborative,online,draw,paint,shared,realtime,wbo,whitebophir,open-source,GPL,javascript" />
-	<link rel="icon" type="image/x-icon" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico">
-	<link rel="shortcut icon" type="image/x-icon" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico" />
-	<link rel="apple-touch-icon" sizes="180x180" href="https://scoreboard.rankedamongus.com/images/favicon/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-16x16.png">
-	<link rel="manifest" href="https://scoreboard.rankedamongus.com/images/favicon/site.webmanifest">
+	<link rel="shortcut icon" type="image/x-icon" href="/images/favicon/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicon/site.webmanifest">
+	<link rel="apple-touch-icon" href="favicon.svg">
+	<link rel="mask-icon" href="favicon.svg" color="black">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta property="og:url" content="https://b.rankedamongus.com">
 	<meta property="og:image" content="{{baseUrl}}/favicon.svg">
