--- a/client-data/board.html
+++ b/client-data/board.html
@@ -10,8 +10,12 @@
 	<meta name="description" content="{{translations.tagline}}" />
 	<meta name="keywords"
 		content="{{translations.collaborative_whiteboard}},online,draw,paint,shared,realtime,wbo,whitebophir" />
-	<link rel="apple-touch-icon" href="../favicon.svg">
-	<link rel="icon" type="image/x-icon" sizes="16x16" href="../favicon.ico">
+	<link rel="icon" type="image/x-icon" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="https://scoreboard.rankedamongus.com/images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="https://scoreboard.rankedamongus.com/images/favicon/site.webmanifest">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
 	<meta property="og:title" content="{{board}} board on WBO" />
 	<meta property="og:url" content="{{baseUrl}}/boards/{{boardUriComponent}}" />
@@ -21,6 +25,15 @@
 	<link rel="alternate" hreflang="{{.}}" href="{{../boardUriComponent}}?lang={{.}}" />
 	{{/languages}}
 	<script src="../polyfill.min.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XGJJEY8G07"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-XGJJEY8G07');
+	</script>
 </head>
 
 <body>
