--- a/client-data/error.html
+++ b/client-data/error.html
@@ -48,6 +48,15 @@
 			animation-play-state: paused;
 		}
 	</style>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XGJJEY8G07"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-XGJJEY8G07');
+	</script>
 </head>
 
 <body>
