--- a/client-data/index.html
+++ b/client-data/index.html
@@ -3,66 +3,84 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>WBO — {{translations.collaborative_whiteboard}}</title>
+	<title>Ranked Among Us Whiteboards</title>
 	<link rel="stylesheet" href="index.css" />
 	<meta name="description" content="{{translations.tagline}}" />
 	<meta name="keywords"
 		content="whiteboard,collaborative,online,draw,paint,shared,realtime,wbo,whitebophir,open-source,GPL,javascript" />
-	<link rel="icon" type="image/x-icon" sizes="16x16" href="favicon.ico">
-	<link rel="apple-touch-icon" href="favicon.svg">
-	<link rel="mask-icon" href="favicon.svg" color="black">
+	<link rel="icon" type="image/x-icon" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="https://scoreboard.rankedamongus.com/images/favicon/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="https://scoreboard.rankedamongus.com/images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://scoreboard.rankedamongus.com/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="https://scoreboard.rankedamongus.com/images/favicon/site.webmanifest">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta property="og:url" content="https://wbo.ophir.dev">
+	<meta property="og:url" content="https://b.rankedamongus.com">
 	<meta property="og:image" content="{{baseUrl}}/favicon.svg">
 	<link rel="canonical" href="?lang={{language}}" />
 	{{#languages}}
 	<link rel="alternate" hreflang="{{.}}" href="?lang={{.}}" />{{/languages}}
 	<link rel="manifest" href="manifest.json">
 	<meta name="theme-color" content="#C4DFFF" />
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-XGJJEY8G07"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'G-XGJJEY8G07');
+	</script>
 </head>
 
 <body>
 
 	<header>
-		<h1>WBO</h1>
-		<nav class="lang-selector">
-			<span>{{language}}</span>
-			<ul>
-				{{#languages}}
-				<li><a href="?lang={{.}}" hreflang="{{.}}" rel="alternate">{{.}}</a></li>
-				{{/languages}}
-			</ul>
-		</nav>
+		<h1>Ranked Among Us Whiteboards</h1>
 	</header>
 
 	<main>
 		<div id="description">
-			<h3>{{translations.index_title}}</h3>
-			<p>{{{translations.introduction_paragraph}}}</p>
-			<p>{{{translations.share_instructions}}}</p>
+			<h3>Welcome to Ranked Among Us Whiteboards</h3>
+			<p>To collaborate on a drawing in real time with someone, just send them its URL.</p>
 		</div>
 
 		<div>
 			<p>{{{translations.public_board_description}}}</p>
-			<a href="boards/anonymous" class="wbo-button">{{{translations.open_public_board}}}</a>
+			<a href="Polus/anonymousPolus" class="wbo-button">Go to Public Among Us <img src="https://scoreboard.rankedamongus.com/images/AmongUs/polus.png" style="height:45px;margin-bottom:-15px"/></a>
+			<a href="Mira/anonymousMira" class="wbo-button">Go to Public Among Us <img src="https://scoreboard.rankedamongus.com/images/AmongUs/mira.png" style="height:45px;margin-bottom:-15px"/></a>
+			<a href="Skeld/anonymousSkeld" class="wbo-button">Go to Public Among Us <img src="https://scoreboard.rankedamongus.com/images/AmongUs/skeld.png" style="height:45px;margin-bottom:-15px"/></a>
+			<a href="AirShip/anonymousAirShip" class="wbo-button">Go to Public Among Us <img src="https://scoreboard.rankedamongus.com/images/AmongUs/airship.png" style="height:45px;margin-bottom:-15px"/></a>
 		</div>
 
 		<div>
 			<p>{{{translations.private_board_description}}}</p>
-			<a href="random" class="wbo-button">{{{translations.create_private_board}}}</a>
+			<a href="randomPolus" class="wbo-button">{{{translations.create_private_board}}} <img src="https://scoreboard.rankedamongus.com/images/AmongUs/polus.png" style="height:45px;margin-bottom:-15px"/></a>
+			<a href="randomMira" class="wbo-button">{{{translations.create_private_board}}} <img src="https://scoreboard.rankedamongus.com/images/AmongUs/mira.png" style="height:45px;margin-bottom:-15px"/></a>
+			<a href="randomSkeld" class="wbo-button">{{{translations.create_private_board}}} <img src="https://scoreboard.rankedamongus.com/images/AmongUs/skeld.png" style="height:45px;margin-bottom:-15px"/></a>
+			<a href="randomAirShip" class="wbo-button">{{{translations.create_private_board}}} <img src="https://scoreboard.rankedamongus.com/images/AmongUs/airship.png" style="height:45px;margin-bottom:-15px"/></a>
 		</div>
 
 		<div>
 			<p><label for="board">{{{translations.named_private_board_description}}}</label></p>
-			<form action="boards" method="GET">
-				<input type="text" id="board" name="board" required placeholder="{{{translations.board_name_placeholder}}}" />
-				<input type="submit" value="Go">
+			<form action="Polus" method="GET">
+				<input type="text" id="board" name="board" placeholder="{{{translations.board_name_placeholder}}} Polus" />
+				<input type="submit" value="Go"><img src="https://scoreboard.rankedamongus.com/images/AmongUs/polus.png" style="height:45px;margin-bottom:-15px"/>
+			</form>
+			<form action="Mira" method="GET">
+				<input type="text" id="board" name="board" placeholder="{{{translations.board_name_placeholder}}} Mira HQ" />
+				<input type="submit" value="Go"><img src="https://scoreboard.rankedamongus.com/images/AmongUs/mira.png" style="height:45px;margin-bottom:-15px"/>
+			</form>
+			<form action="Skeld" method="GET">
+				<input type="text" id="board" name="board" placeholder="{{{translations.board_name_placeholder}}} Skeld" />
+				<input type="submit" value="Go"><img src="https://scoreboard.rankedamongus.com/images/AmongUs/skeld.png" style="height:45px;margin-bottom:-15px"/>
+			</form>
+			<form action="AirShip" method="GET">
+				<input type="text" id="board" name="board" placeholder="{{{translations.board_name_placeholder}}} AirShip" />
+				<input type="submit" value="Go"><img src="https://scoreboard.rankedamongus.com/images/AmongUs/airship.png" style="height:45px;margin-bottom:-15px"/>
 			</form>
 		</div>
-
-		<div id="recent-boards" class="hidden">
-			<h3>{{{translations.recent_boards}}}</h3>
-		</div>
+		
 	</main>
 
 
@@ -74,7 +92,5 @@
 		</a>
 	</footer>
 </body>
-
-<script src="../js/index.js" async defer></script>
 
 </html>
